@@ -233,6 +233,16 @@ end
           <td>string</td>
           <td>yes</td>
         </tr>
+        <tr>
+          <td><code>context_prefix</code></td>
+          <td>string</td>
+          <td>no</td>
+        </tr>
+        <tr>
+          <td><code>context_document_root</code></td>
+          <td>string</td>
+          <td>no</td>
+        </tr>
 
         <tr>
           <td><code>document_root</code></td>
@@ -267,6 +277,11 @@ end
         </tr>
         <tr>
           <td><code>hostname</code></td>
+          <td>string</td>
+          <td>no</td>
+        </tr>
+        <tr>
+          <td><code>log_id</code></td>
           <td>string</td>
           <td>no</td>
         </tr>
@@ -329,6 +344,11 @@ end
           <td><code>user</code></td>
           <td>string</td>
           <td>yes</td>
+        </tr>
+        <tr>
+          <td><code>useragent_ip</code></td>
+          <td>string</td>
+          <td>no</td>
         </tr>
         </table>
 
